# claudeworks

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude-plugin/: marketplace.json
plugins/workflow/.claude-plugin/: plugin.json
plugins/workflow/commands/: cleanup-commits.md
plugins/workflow/skills/git-rebase/: SKILL.md
shared/: __init__.py
